--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.cognifide.slice</groupId>
 	<artifactId>slice-parent</artifactId>
-	<version>3.0.0-cq54-SNAPSHOT</version>
+	<version>3.0.0-cq54</version>
 
 	<name>Slice - Parent</name>
 	<url>http://cognifide.com/</url>
