--- a/slice-core/pom.xml
+++ b/slice-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.cognifide.slice</groupId>
 		<artifactId>slice-parent</artifactId>
-		<version>3.0.0-cq54-SNAPSHOT</version>
+		<version>3.0.0-cq54</version>
 	</parent>
 	<name>Slice - Core</name>
 	<description>Slice core</description>
@@ -44,12 +44,12 @@
 		<dependency>
 			<groupId>com.cognifide.slice</groupId>
 			<artifactId>slice-core-api</artifactId>
-			<version>3.0.0-cq54-SNAPSHOT</version>
+			<version>3.0.0-cq54</version>
 		</dependency>
 		<dependency>
 			<groupId>com.cognifide.slice</groupId>
 			<artifactId>slice-mapper-api</artifactId>
-			<version>3.0.0-cq54-SNAPSHOT</version>
+			<version>3.0.0-cq54</version>
 		</dependency>
 
 		<!-- Asm -->	
