--- a/slice-cq-taglib/pom.xml
+++ b/slice-cq-taglib/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>com.cognifide.slice</groupId>
 		<artifactId>slice-parent</artifactId>
-		<version>3.0.0-cq54-SNAPSHOT</version>
+		<version>3.0.0-cq54</version>
 	</parent>
 	
 	<properties>
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>com.cognifide.slice</groupId>
 			<artifactId>slice-core</artifactId>
-			<version>3.0.0-cq54-SNAPSHOT</version>
+			<version>3.0.0-cq54</version>
 		</dependency>
 
 		<!-- Adobe CQ5 WCM -->
